Bug fix: ContactUsComponent should always stick to the very bottom on mobile devices, but there was a pixel of gap, displaying content behind it

--- a/src/app/components/contact-us/contact-us.component.scss
+++ b/src/app/components/contact-us/contact-us.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   background-color: #e2afa2;
+  height: 3.3rem;
 
   .flex-item {
     display: flex;
@@ -15,8 +16,7 @@
 
     a {
       display: block;
-      padding-top: 0.4rem;
-      padding-bottom: 0.2rem;
+      padding-top: 0.2rem;
       // border: 1px solid red;
 
       .flex-link {
@@ -43,6 +43,7 @@
 @media screen and (min-width: $width-md) {
   .flex-container {
     flex-direction: column;
+    height: auto;
 
     position: sticky;
     top: 5rem;
@@ -52,6 +53,7 @@
       flex-direction: row;
 
       a {
+        padding-top: 0.4rem;
         padding-bottom: 0.4rem;
 
         .flex-link {
